@@ -15,3 +15,8 @@
 #comment {
 	background: #FFFFF8;
 }
+#result_table_title {
+	font-weight: bold;
+	color: #0000FF;
+	background: #FFFFF0;
+}
